# OpenGL-GameEngine

./: CMakeLists.txt  README.md
src/: main.cpp
src/Actors/: Actor.cpp  Actor.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
src/Components/: ClearColor.cpp  ClearColor.h  Component.cpp  Component.h  Components.cpp  Components.h
src/Environments/: ClearColor.cpp  ClearColor.h  Environment.cpp  Environment.h
src/GUI/: GUI.cpp  GUI.h  MainGUI.cpp  MainGUI.h  ScenesGUI.cpp  ScenesGUI.h
src/Shader/: Rectangle.frag  Rectangle.vert  Triangle.frag  Triangle.vert
src/Shader/Actor/Verticles/: Verticle.frag
src/Tools/: Shader.cpp  Shader.h  Singleton.h
src/imgui/: imgui_impl_glfw.cpp
